--- a/myquiz-app/src/App.css
+++ b/myquiz-app/src/App.css
@@ -28,6 +28,74 @@ body {
   align-items: center;
   flex-direction: column;
 }
+.question-title {
+    margin-top: 2rem;
+    padding: 15px 20px 20px;
+    height: 50px;
+    font-size: 1.5rem;
+    
+    font-weight: 500;
+    background: green;
+    color: #a1a1a1;
+    border: none;
+  }
+  
+  .default_dropdown {
+    width: 100%;
+    padding: 15px 20px 20px;
+    height: 50px;
+    font-size: 1.5rem;
+    
+    font-weight: 500;
+    background: green;
+    color: #a1a1a1;
+    border: none;
+    border-radius: 1.5rem;
+    outline: none;
+  }
+.quiz-paragraph {
+    padding: 5px;
+    height: 25px;
+    font-size: 18px;
+    line-height: 1.6;
+    margin: 10px 0;
+  }
+  .text-blue {
+    color: #00ffff;
+    font-weight: 500;
+  }
+  .text-yellow {
+    color: yellow;
+    font-weight: 500;
+  }
+  .text-green {
+    color: lightgreen;
+    font-weight: 500;
+   
+  }
+  .quiz-summary {
+    padding: 5px;
+    height: 25px;
+    font-size: medium;
+    line-height: 1.6;
+    margin: 10px 0;
+  }
+  .quiz-container
+  {
+    margin: 20px;
+    height: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 10px;
+  }
+
+.quiz-container h2 {
+    margin-bottom: 5px;
+    color: white;
+    padding: 2px;
+    
+  }
+
 
 h1 {
   font-size: 3rem;
